@@ -232,4 +232,24 @@ subtest deltas => sub {
     );
 };
 
+{
+  package Foo;
+
+  use base 'MyTest::Target';
+
+  sub new {
+      my $class = shift;
+      bless [ @_ ] , $class;
+  }
+}
+
+subtest objects_as_arrays => sub {
+
+    my $o1 = Foo->new( 'b' ) ;
+    my $o2 = Foo->new( 'b' ) ;
+
+    is ( $o1, $o2, "same" );
+};
+
+
 done_testing;
