@@ -21,7 +21,7 @@ subtest verify => sub {
 
 subtest init => sub {
     my $one = $CLASS->new();
-    ok($one, "args are not required");
+    ok( defined $one, "args are not required");
     is($one->items, {}, "got the items hash");
     is($one->order, [], "got order array");
 
@@ -178,5 +178,25 @@ subtest deltas => sub {
     );
 
 };
+
+{
+  package Foo;
+
+  use base 'MyTest::Target';
+
+  sub new {
+      my $class = shift;
+      bless { @_ } , $class;
+  }
+}
+
+subtest objects_with_hashes => sub {
+
+    my $o1 = Foo->new( b => { foo => 2 } ) ;
+    my $o2 = Foo->new( b => { foo => 2 } ) ;
+
+    is ( $o1, $o2, "same" );
+};
+
 
 done_testing;
